// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Height handles % value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--_uic-h": "50%",
  },
}
`;

exports[`Styles/Height handles px value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--_uic-h": "50px",
  },
}
`;

exports[`Styles/Height handles responsive value 1`] = `
{
  "classNames": [
    "literal",
    "literal--l",
  ],
  "variables": {
    "--_uic-h": "50px",
    "--_uic-h-l": "50%",
  },
}
`;

exports[`Styles/Height handles undefined value 1`] = `null`;

exports[`Styles/Height handles unit value 1`] = `
{
  "classNames": [
    "unit",
  ],
  "variables": {
    "--_uic-h": 5,
  },
}
`;
